<resources>
    <string name="app_name" translatable="false">ArcCalendar</string>
    <string name="create">CREATE</string>
    <string name="cancel">Cancel</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="create_excavation">Create excavation</string>
    <string name="place">Place</string>
    <string name="organisation">Organisation</string>
    <string name="organisation_title">Organisation:</string>
    <string name="delete_excavation">Delete excavation?</string>
    <string name="edit_excavation">Edit excavation</string>
    <string name="works">WORKS</string>
    <string name="works_label">Works</string>
    <string name="description">Description</string>
    <string name="create_work">Create work</string>
    <string name="excavation_director">Excavation director</string>
    <string name="title_activity_work_tabs">Works</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="info">Info</string>
    <string name="locations">Locations</string>
    <string name="delete_finding">Delete finding?</string>
    <string name="delete_work">Delete work?</string>
    <string name="delete_all_works">Delete all the works?</string>
    <string name="date">Date</string>
    <string name="tap_to_select_a_date">Tap to select a date..</string>
    <string name="excavation_directors">Excavation directors</string>
    <string name="add_director_name">Add director name</string>
    <string name="archaeologists">Archaeologists</string>
    <string name="add_arc_name">Add archaeologist name</string>
    <string name="students">Students</string>
    <string name="add_student_name">Add student name</string>
    <string name="create_finding">Create finding</string>
    <string name="director">Excavation director</string>
    <string name="findings">FINDINGS</string>
    <string name="findings_title">Findings</string>
    <string name="e_g_east_zone_a1">e.g. East Zone A1</string>
    <string name="add_new_location">Add new location</string>
    <string name="finding_name">Finding name</string>
    <string name="delete_all_locations">Delete all locations?</string>
    <string name="edit_finding">Edit finding</string>
    <string name="search">Search</string>
</resources>
