<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/create_excavation"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/et_excavation_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:layout_marginBottom="20sp"/>

    <EditText
        android:id="@+id/et_organisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/organisation"/>

</LinearLayout>